--- a/OldVersions/GITATTRIBUTES/1/1-100/README.cfg
+++ b/OldVersions/GITATTRIBUTES/1/1-100/README.cfg
@@ -32,6 +32,16 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
+# Edge source file
+*.edge linguist-detectable=true
+*.edge linguist-documentation=false
+*.edge linguist-language=Edge
+*.ele linguist-detectable=true
+*.ele linguist-documentation=false
+*.ele linguist-language=Edge
+*.node linguist-detectable=true
+*.node linguist-documentation=false
+*.node linguist-language=Edge
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -161,10 +171,13 @@
 *.gif linguist-detectable=false
 *.gif linguist-documentation=false
 *.gif linguist-language=GIF
+
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2024, Monday, August 12th at 10:29 pm PST)
+# Line count (including blank lines and compiler line): 184
+
 # End of script
